--- a/styles.css
+++ b/styles.css
@@ -62,4 +62,8 @@ body {
     text-align: center;
     padding: 16px 0;
 }
+.estudante-todos{
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+}
 
