--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
-*{
+
+{
     margin: 0;
     padding: 0;
 }
@@ -6,7 +7,7 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 .cabecalho {
-    background-color: #424447;
+    background-color: green;
     color: white;
     display: flex;
     justify-content: space-around;
@@ -15,7 +16,7 @@ body {
 }
 
 .cabecalho-imagem{ background-color: black;
-    width: 5%;;
+    width: 25%;;
 }
 
 .cabecalho-lista-item{
@@ -25,11 +26,11 @@ body {
 }
 
 .escola-imagem{
-    width: 5%;
+    width: 25%;
 }
 
 .escola{
-    background-image: linear-gradient(#2173d1,#216fe4);
+    background-image: linear-gradient(#424E61,#16CFF8);
     color:white;
     display: flex;
     justify-content: center;
@@ -61,9 +62,5 @@ body {
 .estudante-div{
     text-align: center;
     padding: 16px 0;
-}
-.estudante-todos{
-    display: grid;
-    grid-template-columns: 20% 20% 20% 20% 20%;
 }
 
